# visual-patch-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: readme_visual_example.py
src/visual_patch_audit/: __init__.py  core.py  features.py  metrics.py
tests/: test_core.py  test_features.py  test_metrics.py
